syntax = "proto3";

package proto;

option go_package = "./";

message WeatherData {
  string description = 1;
  string country = 2;
  string weather = 3;
}

message WeatherResponse {
  string message = 1;
}

service WeatherService {
  rpc PostToRabbitMQ(WeatherData) returns (WeatherResponse);
  rpc PostToKafka(WeatherData) returns (WeatherResponse);
}